@@ -1,7 +1,5 @@
 /* This file is part of the Spring engine (GPL v2 or later), see LICENSE.html */
 
-#include "System/EventHandler.h"
-
 #include "LuaVFSDownload.h"
 #include "System/SafeUtil.h"
 #include "System/EventHandler.h"
@@ -9,149 +7,157 @@
 #include "System/Threading/SpringThreading.h"
 #include "System/FileSystem/ArchiveScanner.h"
 #include "System/FileSystem/DataDirLocater.h"
+#include "../tools/pr-downloader/src/pr-downloader.h"
 
 #include "LuaInclude.h"
 #include "LuaUtils.h"
 
-/******************************************************************************/
-/******************************************************************************/
+#include <deque>
+#include <memory>
 
-struct dlEvent {
+
+struct DLEvent {
+	DLEvent(int _id): id(_id) {}
+	virtual ~DLEvent() {}
+	virtual void Process() const = 0;
+
 	int id;
-	virtual void processEvent() = 0;
-	virtual ~dlEvent(){}
 };
 
-struct dlStarted : public dlEvent {
-	void processEvent() {
+struct DLStartedEvent: public DLEvent {
+	DLStartedEvent(int _id): DLEvent(_id) {}
+	void Process() const override {
+		// handled by DLFinishedEvent
+		// archiveScanner->ScanAllDirs();
 		eventHandler.DownloadStarted(id);
 	}
 };
-struct dlFinished : public dlEvent {
-	void processEvent() {
+
+struct DLFinishedEvent: public DLEvent {
+	DLFinishedEvent(int _id): DLEvent(_id) {}
+	void Process() const override {
+		// rescan before notifying clients; typically blocks less than ~50ms
+		archiveScanner->ScanAllDirs();
 		eventHandler.DownloadFinished(id);
 	}
 };
-struct dlFailed : public dlEvent {
+
+struct DLFailedEvent: public DLEvent {
+	DLFailedEvent(int _id, int _errorID): DLEvent(_id), errorID(_errorID) {}
+	void Process() const override { eventHandler.DownloadFailed(id, errorID); }
+
 	int errorID;
-	void processEvent() {
-		eventHandler.DownloadFailed(id, errorID);
-	}
 };
-struct dlProgress : public dlEvent {
+
+struct DLProgressEvent: public DLEvent {
+	DLProgressEvent(int _id, long _downloaded, long _total): DLEvent(_id), downloaded(_downloaded), total(_total) {}
+	void Process() const override { eventHandler.DownloadProgress(id, downloaded, total); }
+
 	long downloaded;
 	long total;
-	void processEvent() {
-		eventHandler.DownloadProgress(id, downloaded, total);
-	}
 };
+
+
 
 struct DownloadItem {
 	int id;
 	std::string filename;
 	DownloadEnum::Category cat;
-	DownloadItem() { }
-	DownloadItem(int id_, const std::string& filename, DownloadEnum::Category& cat) : id(id_), filename(filename), cat(cat) { }
+
+	DownloadItem() {}
+	DownloadItem(int id_, const std::string& filename_, DownloadEnum::Category& cat_) : id(id_), filename(filename_), cat(cat_) {}
 };
 
 
 struct DownloadQueue {
 public:
-	DownloadQueue(): thread(nullptr), breakLoop(false) {}
+	DownloadQueue(): breakLoop(false) {}
 	~DownloadQueue() { Join(); }
 
 	void Pump();
 	void Push(const DownloadItem& downloadItem);
+	void Join();
+
 	bool Remove(int id);
 
-	void Join();
 private:
 	std::deque<DownloadItem> queue;
 	spring::mutex mutex;
-	spring::thread* thread;
+	spring::thread thread;
+
 	bool breakLoop;
-} downloadQueue;
+};
 
-std::deque<dlEvent*> dlEventQueue;
-spring::mutex dlEventQueueMutex;
 
-void AddQueueEvent(dlEvent* ev) {
-	std::lock_guard<spring::mutex> lck(dlEventQueueMutex);
-	dlEventQueue.push_back(ev);
-}
+static DownloadQueue downloadQueue;
 
-void QueueDownloadStarted(int id) //queue from other thread download started event
-{
-	dlStarted* ev = new dlStarted();
-	ev->id = id;
-	AddQueueEvent(ev);
-}
-
-void QueueDownloadFinished(int id) //queue from other thread download started event
-{
-	dlFinished* ev = new dlFinished();
-	ev->id = id;
-	AddQueueEvent(ev);
-}
-
-void QueueDownloadFailed(int id, int errorID) //queue from other thread download started event
-{
-	dlFailed* ev = new dlFailed();
-	ev->id = id;
-	ev->errorID = errorID;
-	AddQueueEvent(ev);
-}
-
-void QueueDownloadProgress(int id, long downloaded, long total) //queue from other thread download started event
-{
-	dlProgress* ev = new dlProgress();
-	ev->id = id;
-	ev->downloaded = downloaded;
-	ev->total = total;
-	AddQueueEvent(ev);
-}
-
+static std::deque< std::shared_ptr<DLEvent> > dlEventQueue;
+static spring::mutex dlEventQueueMutex;
 
 static int queueIDCount = -1;
 static int currentDownloadID = -1;
 
-void StartDownload();
 
-void UpdateProgress(int done, int size) {
-	QueueDownloadProgress(currentDownloadID, done, size);
+
+static void AddQueueEvent(std::shared_ptr<DLEvent> ev) {
+	std::lock_guard<spring::mutex> lck(dlEventQueueMutex);
+	dlEventQueue.push_back(ev);
 }
 
+static void QueueDownloadStarted(int id) { AddQueueEvent(std::make_shared<DLStartedEvent>(id)); }
+static void QueueDownloadFinished(int id) { AddQueueEvent(std::make_shared<DLFinishedEvent>(id)); }
+static void QueueDownloadFailed(int id, int errorID) { AddQueueEvent(std::make_shared<DLFailedEvent>(id, errorID)); }
+static void QueueDownloadProgress(int id, long downloaded, long total) { AddQueueEvent(std::make_shared<DLProgressEvent>(id, downloaded, total)); }
 
-int Download(int id, const std::string& filename, DownloadEnum::Category cat)
+static void UpdateProgress(int done, int size) { QueueDownloadProgress(currentDownloadID, done, size); }
+
+
+
+static int StartDownloadJob(int id, const std::string& filename, DownloadEnum::Category cat)
 {
 	currentDownloadID = id;
-	// FIXME: Progress is incorrectly updated when rapid is queried to check for existing packages.
+
+	// FIXME: progress is incorrectly updated when rapid is queried to check for existing packages
 	SetDownloadListener(UpdateProgress);
-	LOG_L(L_DEBUG, "Going to download %s", filename.c_str());
+
+	LOG_L(L_DEBUG, "[%s] downloading \"%s\"", __func__, filename.c_str());
+
 	const int count = DownloadSearch(cat, filename.c_str());
+
+	LOG_L(L_DEBUG, "[%s] download count: %d", __func__, count);
+
 	for (int i = 0; i < count; i++) {
 		DownloadAdd(i);
+
 		struct downloadInfo dl;
-		if (DownloadGetInfo(i, dl)) {
-			LOG_L(L_DEBUG, "Download info: %s %d", dl.filename, dl.cat);
-		}
-	}
-	int result;
-	LOG_L(L_DEBUG, "Download count: %d", count);
-	// TODO: count will be 1 when archives already exist. We should instead return a different result with DownloadFailed/DownloadFinished?
-	if (count == 0) { // there's nothing to download
-		result = 2;
-		QueueDownloadFailed(id, result);
-	} else {
-		LOG_L(L_DEBUG, "Download finished %s", filename.c_str());
-		QueueDownloadStarted(id);
-		result = DownloadStart();
-		// TODO: This works but there are errors spammed as it's trying to clear timers in the main thread, which this is not:
-		// Error: [Watchdog::ClearTimer(id)] Invalid thread 4 (_threadId=(nil))
-		archiveScanner->ScanAllDirs();
+		if (!DownloadGetInfo(i, dl))
+			continue;
+
+		LOG_L(L_DEBUG, "\tinfo=%d name=%s cat=%d", i, dl.filename, dl.cat);
 	}
 
-	return result;
+	// nothing to download
+	// TODO:
+	//   count will be 1 when an archive already exists; should
+	//   instead return a different result with DownloadFailed
+	//   or DownloadFinished?
+	if (count == 0) {
+		QueueDownloadFailed(id, 2);
+		return 2;
+	}
+
+	QueueDownloadStarted(id);
+
+	// FIXME:
+	//   many functions in ArchiveScanner do not lock, and are called at
+	//   various stages during loading (e.g. ArchiveFromName in PreGame)
+	//   a call to VFS.DownloadArchive (say from LuaMenu just prior to a
+	//   Spring.Reload) pushes an item into the queue which might at any
+	//   point be consumed by the dl-pump thread running StartDownloadJob
+	//   so this is problematic
+	//   does not even make sense to rescan until download is *finished*
+	// archiveScanner->ScanAllDirs();
+	return (DownloadStart());
 }
 
 
@@ -159,10 +165,10 @@ int Download(int id, const std::string& filename, DownloadEnum::Category cat)
 void DownloadQueue::Join()
 {
 	breakLoop = true;
-	if (thread != nullptr) {
-		thread->join();
-		spring::SafeDelete(thread);
-	}
+
+	if (thread.joinable())
+		thread.join();
+
 	breakLoop = false;
 }
 
@@ -173,27 +179,27 @@ void DownloadQueue::Pump()
 		DownloadItem downloadItem;
 		{
 			std::lock_guard<spring::mutex> lck(mutex);
-			assert(queue.size() > 0);
+			assert(!queue.empty());
 			downloadItem = queue.front();
 		}
+
 		const std::string& filename = downloadItem.filename;
-		DownloadEnum::Category cat = downloadItem.cat;
-		int id = downloadItem.id;
 
 		if (!filename.empty()) {
-			LOG_L(L_DEBUG, "DOWNLOADING: %s", filename.c_str());
-			const int result = Download(id, filename, cat);
+			const int result = StartDownloadJob(downloadItem.id, filename, downloadItem.cat);
+
 			if (result == 0) {
-				QueueDownloadFinished(id);
+				QueueDownloadFinished(downloadItem.id);
 			} else {
-				QueueDownloadFailed(id, result);
+				QueueDownloadFailed(downloadItem.id, result);
 			}
 		}
 
 		{
 			std::lock_guard<spring::mutex> lck(mutex);
 			queue.pop_front();
-			if(queue.empty())
+
+			if (queue.empty())
 				break;
 		}
 	}
@@ -204,18 +210,16 @@ void DownloadQueue::Push(const DownloadItem& downloadItem)
 	std::unique_lock<spring::mutex> lck(mutex);
 
 	if (queue.empty()) {
-		if (thread != nullptr) {
+		// keep only one concurrent download-thread
+		if (thread.joinable()) {
 			lck.unlock();
-
-			thread->join();
-			spring::SafeDelete(thread);
-
+			thread.join();
 			lck.lock();
 		}
 
 		// mutex is still locked, thread will block if it gets
 		// to queue.front() before we get to queue.push_back()
-		thread = new spring::thread(std::bind(&DownloadQueue::Pump, this));
+		thread = std::move(spring::thread(&DownloadQueue::Pump, this));
 	}
 
 	queue.push_back(downloadItem);
@@ -226,9 +230,8 @@ bool DownloadQueue::Remove(int id)
 	std::unique_lock<spring::mutex> lck(mutex);
 
 	for (auto it = queue.begin(); it != queue.end(); ++it) {
-		if (it->id != id) {
+		if (it->id != id)
 			continue;
-		}
 
 		if (it == queue.begin()) {
 			SetAbortDownloads(true);
@@ -236,29 +239,24 @@ bool DownloadQueue::Remove(int id)
 			Join();
 			lck.lock();
 			SetAbortDownloads(false);
-			thread = new spring::thread(std::bind(&DownloadQueue::Pump, this));
+
+			thread = std::move(spring::thread(&DownloadQueue::Pump, this));
 		} else {
 			queue.erase(it);
 		}
+
 		return true;
 	}
+
 	return false;
 }
 
 
 
-/******************************************************************************/
-
-bool LuaVFSDownload::PushEntries(lua_State* L)
-{
-	REGISTER_LUA_CFUNC(DownloadArchive);
-	REGISTER_LUA_CFUNC(AbortDownload);
-	return true;
-}
 
 
-LuaVFSDownload::LuaVFSDownload():
-	CEventClient("[LuaVFSDownload]", 314161, false)
+
+LuaVFSDownload::LuaVFSDownload(): CEventClient("[LuaVFSDownload]", 314161, false)
 {
 	DownloadInit();
 	DownloadSetConfig(CONFIG_FILESYSTEM_WRITEPATH, dataDirLocater.GetWriteDirPath().c_str());
@@ -269,6 +267,7 @@ LuaVFSDownload::~LuaVFSDownload()
 	DownloadShutdown();
 }
 
+
 void LuaVFSDownload::Init()
 {
 	eventHandler.AddClient(luaVFSDownload);
@@ -277,6 +276,7 @@ void LuaVFSDownload::Init()
 void LuaVFSDownload::Free(bool stopDownloads)
 {
 	eventHandler.RemoveClient(luaVFSDownload);
+
 	if (stopDownloads) {
 		SetAbortDownloads(true);
 		downloadQueue.Join();
@@ -284,19 +284,40 @@ void LuaVFSDownload::Free(bool stopDownloads)
 }
 
 
-LuaVFSDownload* LuaVFSDownload::GetInstance()
+void LuaVFSDownload::Update()
 {
-	static LuaVFSDownload instance;
-	return &instance;
+	assert(Threading::IsMainThread() || Threading::IsGameLoadThread());
+	// only locks the mutex if the queue is not empty
+	std::unique_lock<spring::mutex> lck(dlEventQueueMutex);
+
+	while (!dlEventQueue.empty()) {
+		std::shared_ptr<DLEvent> ev = dlEventQueue.front();
+		dlEventQueue.pop_front();
+
+		{
+			dlEventQueueMutex.unlock();
+			ev->Process();
+			dlEventQueueMutex.lock();
+		}
+	}
+}
+
+
+
+bool LuaVFSDownload::PushEntries(lua_State* L)
+{
+	REGISTER_LUA_CFUNC(DownloadArchive);
+	REGISTER_LUA_CFUNC(AbortDownload);
+	return true;
 }
 
 int LuaVFSDownload::DownloadArchive(lua_State* L)
 {
-	const std::string filename = luaL_checkstring(L, 1);
-	const std::string categoryStr = luaL_checkstring(L, 2);
-	if (filename.empty()) {
+	const std::string& filename = luaL_checkstring(L, 1);
+	const std::string& categoryStr = luaL_checkstring(L, 2);
+
+	if (filename.empty())
 		return luaL_error(L, "Missing download archive name.");
-	}
 
 	DownloadEnum::Category cat;
 	if (categoryStr == "map") {
@@ -317,27 +338,7 @@ int LuaVFSDownload::DownloadArchive(lua_State* L)
 
 int LuaVFSDownload::AbortDownload(lua_State* L)
 {
-	const int id = luaL_checkint(L, 1);
-	bool removed = downloadQueue.Remove(id);
-	lua_pushboolean(L, removed);
+	lua_pushboolean(L, downloadQueue.Remove(luaL_checkint(L, 1)));
 	return 1;
-}
-
-void LuaVFSDownload::Update()
-{
-	assert(Threading::IsMainThread() || Threading::IsGameLoadThread());
-	// only locks the mutex if the queue is not empty
-	std::unique_lock<spring::mutex> lck(dlEventQueueMutex);
-	while (!dlEventQueue.empty()) {
-		dlEvent* ev = dlEventQueue.front();
-		dlEventQueue.pop_front();
-
-		{
-			dlEventQueueMutex.unlock();
-			ev->processEvent();
-			spring::SafeDelete(ev);
-			dlEventQueueMutex.lock();
-		}
-	}
 }
 
