@@ -3,32 +3,36 @@
 #ifndef LUA_DOWNLOADER_H
 #define LUA_DOWNLOADER_H
 
+#include "System/EventClient.h"
+
 struct lua_State;
 
-#include <deque>
-#include "System/Threading/SpringThreading.h"
-#include "../tools/pr-downloader/src/pr-downloader.h"
-
-
 class LuaVFSDownload: public CEventClient {
-	public:
-		static LuaVFSDownload* GetInstance();
-		static void Free(bool stopDownloads = false);
-		static void Init();
+public:
+	static LuaVFSDownload* GetInstance() {
+		static LuaVFSDownload instance;
+		return &instance;
+	}
 
-		bool WantsEvent(const std::string& eventName) override {
-			return (eventName == "Update");
-		}
+	static void Init();
+	static void Free(bool stopDownloads = false);
 
-		static bool PushEntries(lua_State* L);
-		//checks if some events have arrived from other threads and then fires the events
-		void Update() override;
+	static bool PushEntries(lua_State* L);
 
-	private:
-		LuaVFSDownload();
-		virtual ~LuaVFSDownload();
-		static int DownloadArchive(lua_State* L);
-		static int AbortDownload(lua_State* L);
+
+	bool WantsEvent(const std::string& eventName) override {
+		return (eventName == "Update");
+	}
+
+	// checks if events have arrived from download-threads and processes them
+	void Update() override;
+
+private:
+	LuaVFSDownload();
+	~LuaVFSDownload();
+
+	static int DownloadArchive(lua_State* L);
+	static int AbortDownload(lua_State* L);
 };
 
 #define luaVFSDownload (LuaVFSDownload::GetInstance())
